--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 blinker==1.9.0
 certifi==2025.1.31
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+cryptography==44.0.2
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-SQLAlchemy==3.1.1
@@ -15,6 +17,8 @@ Jinja2==3.1.5
 MarkupSafe==3.0.2
 numpy==2.2.3
 packaging==24.2
+pycparser==2.22
+PyJWT==2.10.1
 PyMySQL==1.1.1
 requests==2.32.3
 shapely==2.0.7
@@ -22,4 +26,3 @@ SQLAlchemy==2.0.38
 typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
-PyJWT==2.8.0
